# ChangeLog for x11-proto/xf86vidmodeproto
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86vidmodeproto/ChangeLog,v 1.27 2007/09/08 14:01:16 philantrop Exp $

  08 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
  files/digest-xf86vidmodeproto-2.2.2, Manifest:
  Fixed manifest. cf. bug 191699.

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> xf86vidmodeproto-2.2.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Mark 2.2.2 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86vidmodeproto-2.2.2.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86vidmodeproto-2.2.2.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-xf86vidmodeproto-2.2.2, Manifest:
  Fix digest.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86vidmodeproto-2.2.2.ebuild:
  x86 stable.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86vidmodeproto-2.2.2.ebuild:
  (#127306) Digests changed between release candidates and final release for
  the same tarballs.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Mark 2.2.2 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org>
  xf86vidmodeproto-2.2.2.ebuild:
  Added ~ppc64
