@@ -1,4 +1,4 @@
 DIST xf86vidmodeproto-2.2.2.tar.bz2 39615 RMD160 b940e671398e1e91cedd1a3ad66c3dcd6bdfeb8a SHA1 4a228958879eb06206d13f4f09ec902f837fb8dd SHA256 07152f990cc79ec5931989decc4a90b1919147e98ff6fcfe39507a9d3fc4d96e
-EBUILD xf86vidmodeproto-2.2.2.ebuild 543 RMD160 b4f3e5a537aaa0394c2199e0c9f872afc9698140 SHA1 40a68fb6b8e605978a1470d452ec408c348ee769 SHA256 3e0ad699f36cf8f46d8b0a73f37170fe3922e7229b35b90b8863a7d4bb214609
-MISC ChangeLog 3372 RMD160 fe71977dbabe0377eebdfc365391f06de2aa4e6b SHA1 fc70a2466bdb8c6a4b4b627c73cd0ff7b0b50962 SHA256 14ca2199bd2c80c7f0a5c8ab7087ff25ba2d68b000dc065d6e0c1f0ea34bdb1a
+EBUILD xf86vidmodeproto-2.2.2.ebuild 542 RMD160 aea61ab4dfa88198146710b3498249dab2f3ba38 SHA1 14fc3e3080dcf53be7744b32ecbc006ddf393d17 SHA256 827b736d38f8ced9aa78477858c4b11a3733af86eee6751a21422c897707b758
+MISC ChangeLog 3479 RMD160 7e58f0637a34d7909613e87a0eb033c9f4b3c61a SHA1 6f230a837a7c8cc244296a511ab89ecf90486ee2 SHA256 c7a92917c498f74e2303912bb481d9bf1b9460c1ab26d75b652f37c15adeb705
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
