@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86vidmodeproto
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86vidmodeproto/ChangeLog,v 1.27 2007/09/08 14:01:16 philantrop Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86vidmodeproto/ChangeLog,v 1.28 2009/05/05 15:41:54 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86vidmodeproto-2.2.2.ebuild:
+  fix repoman warnings
 
   08 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
   files/digest-xf86vidmodeproto-2.2.2, Manifest:
